--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
             <!-- mapa -->
             <div id="map" style="width:100%;height:300px"></div>
             <script src="address.js"></script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTkwFTgcr4wO_80sF5Rk1xbz7e_ZuvL5M&callback=myMap"></script>
-
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTkwFTgcr4wO_80sF5Rk1xbz7e_ZuvL5M&callback=myMap" async defer></script>
         </div>
         
     <!-- End page content -->
