--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="w3-container">
             <ul class="w3-ul w3-border">
-                <li><h1><i class="fa fa-github"></i> <a href="https://github.com/JasonMoraMora" target="_blank">GitHub</a></h1></li>
+                <li><h2>Github</h2></li>
                 <li>CRUD-NodeJS-Mongodb</li>
                 <li>CRUD-NodeJS-MySQL</li>
                 <li>Sistema de notas</li>
@@ -92,6 +92,7 @@
 
             <ul class="w3-ul w3-border">
                 <li><h2>Conocimientos Basicos</h2></li>
+                <li>PUG & HBS</li>
                 <li>Visual Basic & C#</li>
                 <li>Java NetbeansIDE</li>
                 <li>ASP.NET</li>
@@ -129,10 +130,19 @@
         <div class="w3-container" id="certificados">
             <div style="margin-top: 75px"></div>
             <h1 class="w3-xxxlarge w3-text-blue"><b>Certificados</b></h1>
-            <hr class="w3-round w3-text-blue">
-            <div class="w3-container">
-                
-            </div>
+            <hr class="w3-round w3-text-blue">            
+            <div class="w3-row">
+                <div class="w3-col l4 m6 s12 w3-container w3-margin-bottom">
+                    <a href="tecn.jpg" download>
+                        <img src="tecn.jpg" alt="certificado tecnico" width="100%" height="100%">
+                    </a>
+                </div>
+                <div class="w3-col l4 m6 s12 w3-container w3-margin-bottom">
+                    <a href="tecn.jpg" download>
+                        <img src="tecn.jpg" alt="certificado tecnico" width="100%" height="100%">
+                    </a>
+                </div>                
+            </div>            
         </div>
 
         <!-- Contact -->
