--- a/index.html
+++ b/index.html
@@ -55,9 +55,18 @@
         <div class="w3-container">
             <ul class="w3-ul w3-border">
                 <li><h2>Github</h2></li>
-                <li>CRUD-NodeJS-Mongodb</li>
-                <li>CRUD-NodeJS-MySQL</li>
-                <li>Sistema de notas</li>
+                <li>CRUD-NodeJS-Mongodb <br>
+                    <a href="" class="w3-button w3-red w3-round-large"><i class="fas fa-eye"></i></a>
+                    <a href="https://github.com/JasonMoraMora/CRUD-NodeJS-Mongodb" class="w3-button w3-green w3-round-large" target="_blank"><i class="fas fa-code"></i></a>
+                </li>
+                <li>CRUD-NodeJS-MySQL <br>
+                    <a href="" class="w3-button w3-red w3-round-large"><i class="fas fa-eye"></i></a>                    
+                    <a href="https://github.com/JasonMoraMora/CRUD-NodeJS-MySQL" class="w3-button w3-green w3-round-large" target="_blank"><i class="fas fa-code"></i></a>
+                </li>                
+                <li>SystemNote <br>
+                    <a href="" class="w3-button w3-red w3-round-large"><i class="fas fa-eye"></i></a>
+                    <a href="https://github.com/JasonMoraMora/Sistema-de-notas" class="w3-button w3-green w3-round-large" target="_blank"><i class="fas fa-code"></i></a>
+                </li>
             </ul>
         </div>
                 
@@ -151,13 +160,17 @@
             <hr class="w3-round w3-text-blue">
             <ul class="w3-ul">
                 <li>
-                    <i class="fa fa-envelope w3-xlarge"></i> Mail:<br>jasonmoramora@outlook.com        
+                    <i class="fas fa-envelope w3-xlarge"></i> Mail:
+                    <br>jasonmoramora@outlook.com        
                 </li>
                 <li>
-                    <i class="fa fa-phone-square w3-xlarge"></i> Telefono:<br>433-1310 <br> 914491152
+                    <i class="fas fa-phone-square w3-xlarge"></i> Telefono:
+                    <br>433-1310 
+                    <br>914491152
                 </li>
                 <li>
-                    <i class="fa fa-map-marker w3-xlarge"></i> Domicilio:<br>Av. Manco Capac 749 Interior 4. La Victoria
+                    <i class="fas fa-map-marker-alt w3-xlarge"></i> Domicilio:
+                    <br>Av. Manco Capac 749 Interior 4. La Victoria
                 </li>
             </ul>            
             <br>
@@ -167,9 +180,9 @@
             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTkwFTgcr4wO_80sF5Rk1xbz7e_ZuvL5M&callback=myMap" async defer></script>            
             <!-- redes sociales -->
             <h3 class="w3-opacity">Redes Sociales</h3>
-            <a href="https://www.facebook.com/jasonjair.moramora" target="_blank"><i class="fab fa-facebook-square w3-xxxlarge w3-text-indigo"></i></a>
+            <a href="https://www.facebook.com/Jaison-Mora-547396385614913" target="_blank"><i class="fab fa-facebook-square w3-xxxlarge w3-text-indigo"></i></a>
             <a href="https://www.youtube.com/channel/UClpUfzMlZdnZJVlEEu5wE8w?view_as=subscriber" target="_blank"><i class="fab fa-youtube-square w3-xxxlarge w3-text-red w3-margin-left"></i></a>
-            <a href="https://github.com/JasonMoraMora?tab=repositories" target="_blank"><i class="fab fa-github-square w3-xxxlarge w3-text-black w3-margin-left"></i></a>                                
+            <a href="https://github.com/JasonMoraMora" target="_blank"><i class="fab fa-github-square w3-xxxlarge w3-text-black w3-margin-left"></i></a>                                
             <br> <br>
             <a href="https://www.solvetic.com/user/35749-jaisonmora/" class="w3-button w3-border w3-border-cyan"><h5 class="w3-opacity"><i class="far fa-lightbulb w3-text-cyan"></i> Tutoriales</h5></a>
         </div>        
