--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                     <a href="" class="w3-button w3-red w3-round-large"><i class="fas fa-eye"></i></a>
                     <a href="https://github.com/JasonMoraMora/Sistema-de-notas" class="w3-button w3-green w3-round-large" target="_blank"><i class="fas fa-code"></i></a>
                 </li>
+                <li>Servicios Digitales <br>
+                    <a href="https://jasonmoramora.github.io/Servicios-Tecnicos/" class="w3-button w3-red w3-round-large"><i class="fas fa-eye"></i></a>
+                    <a href="https://github.com/JasonMoraMora/Servicios-Tecnicos" class="w3-button w3-green w3-round-large" target="_blank"><i class="fas fa-code"></i></a>
+                </li>
             </ul>
         </div>
                 
