Se agrega nuevo link llamado programas, tiene contenido solo de texto, vectorizar contenido y subir imagenes por cada programa

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="w3-bar-block">
             <a href="#proyectos" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Proyectos</a> 
             <a href="#habilidades" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Habilidades</a> 
+            <a href="#programas" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Programas</a> 
             <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About me</a>
             <a href="#certificados" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Certificados</a>
             <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contacto</a>
@@ -119,6 +120,47 @@
                 <li>Jhonny Five JS</li>
                 <li>API Google maps</li>
             </ul>
+        </div>
+
+        <!-- Programas -->
+        <div class="w3-container" id="programas">
+            <div style="margin-top: 75px"></div>
+            <h1 class="w3-xxxlarge w3-text-blue"><b>Programas</b></h1>
+            <hr class="w3-round w3-text-blue">
+            <h3 class="w3-opacity">Sistemas Operativos</h3>
+            <div class="w3-row">                
+                <div class="w3-col s12">Microsoft Windows</div>
+                <div class="w3-col s12">Linux - Ubuntu</div>
+                <div class="w3-col s12">Linux - Debian</div>                
+            </div>
+            <h3 class="w3-opacity">Desarrollo web</h3>
+            <div class="w3-row">                
+                <div class="w3-col s12">GitKraken</div>
+                <div class="w3-col s12">Visual Studio Code</div>
+                <div class="w3-col s12">Terminal linux</div>
+                <div class="w3-col s12">MongoDB Compass</div>
+                <div class="w3-col s12">MySQL Workbench</div>
+            </div>
+            <h3 class="w3-opacity">Design</h3>
+            <div class="w3-row"> 
+                <div class="w3-col s12">Adobe Illustrator</div>
+            </div>
+            <h3 class="w3-opacity">Ofimatica</h3>
+            <div class="w3-row">
+                <div class="w3-col s12">Microsoft Office</div>
+                <div class="w3-col s12">LibreOffice</div>
+            </div>
+            <h3 class="w3-opacity">Basicos</h3>
+            <div class="w3-row">
+                <div class="w3-col s12">VisualStudio.NeT</div>
+                <div class="w3-col s12">NetbeansIDE</div>
+                <div class="w3-col s12">SQL Server</div>
+                <div class="w3-col s12">Adobe Photoshop</div>
+                <div class="w3-col s12">Adobe InDesign</div>
+                <div class="w3-col s12">Adobe Flash</div>
+                <div class="w3-col s12">Brackets </div>                
+                <div class="w3-col s12">Atom.io</div>
+            </div>
         </div>
 
         <!-- About me -->
