Se agrega el primer proyecto DataQuery

--- a/index.html
+++ b/index.html
@@ -56,33 +56,20 @@
         <div class="w3-container">
             <div>
                 <h2>DataQuery</h2>            
-                <p>Sistema CRUD con almacenador de archivos(.jpg, .png, .gif, etc) para administrar datos de una manera sencilla, cuenta con una interfast interactiva y simplista.</p>
+                <p>Sistema CRUD para administrar datos de una manera sencilla, cuenta con una interfast interactiva y simplista.</p>
                 <div class="w3-opacity">
                     <b><p>Tecnologias usadas:</p></b>
                     <li>NodeJS</li>
                     <li>MongoDB</li>
                     <li>ExpressJS</li>
+                    <li>CSS Grid</li>
+                    <li>W3.css & fontawesome.css</li>
+                    <li>AJAX & JSON</li>
                 </div>
-                <p><a href="" class="w3-button w3-green w3-round-large" target="_blank">Ver detalles</a></p>                
-                <p><a href="" class="w3-button w3-red w3-round-large" target="_blank">Codigo Fuente</a></p>
+                <p><a href="https://github.com/JasonMoraMora/DataQuery/blob/master/README.md" class="w3-button w3-green w3-round-large" target="_blank">Ver detalles</a></p>
             </div>
-        </div>
-
-        <div class="w3-container">
-            <div>
-                <h2>Dhakkan</h2>            
-                <p>Editor que permite transformar el codigo .md a .html</p>
-                <div class="w3-opacity">
-                    <b><p>Tecnologias usadas:</p></b>
-                    <li>NodeJS</li>                    
-                    <li>ExpressJS</li>
-                </div>
-                <p><a href="" class="w3-button w3-green w3-round-large" target="_blank">Ver detalles</a></p>                
-                <p><a href="" class="w3-button w3-red w3-round-large" target="_blank">Codigo Fuente</a></p>
-            </div>
-        </div>
-
-                
+        </div>        
+  
         <!-- habilidades -->
         <div class="w3-container" id="habilidades">
             <div style="margin-top: 75px"></div>
