Se agrega un nuevo proyecto y se quita el boton de tutoriales

--- a/index.html
+++ b/index.html
@@ -54,22 +54,41 @@
             <hr class="w3-round w3-text-blue">
         </div>
         <div class="w3-container">
-            <div>
-                <h2>DataQuery</h2>            
-                <p>Sistema CRUD para administrar datos de una manera sencilla, cuenta con una interfast interactiva y simplista.</p>
-                <div class="w3-opacity">
-                    <b><p>Tecnologias usadas:</p></b>
-                    <li>NodeJS</li>
-                    <li>MongoDB</li>
-                    <li>ExpressJS</li>
-                    <li>CSS Grid</li>
-                    <li>W3.css & fontawesome.css</li>
-                    <li>AJAX & JSON</li>
+            <div class="grid-container">
+                <div class="w3-container w3-card-2">
+                    <div>
+                        <h2>DataQuery</h2>            
+                        <p>Sistema CRUD para administrar datos de una manera sencilla, cuenta con una interfast interactiva y simplista.</p>
+                        <div class="w3-opacity">
+                            <b><p>Tecnologias usadas:</p></b>
+                            <li>NodeJS</li>
+                            <li>MongoDB</li>
+                            <li>ExpressJS</li>
+                            <li>CSS Grid</li>
+                            <li>W3.css & fontawesome.css</li>
+                            <li>AJAX & JSON</li>
+                        </div>
+                        <p><a href="https://github.com/JasonMoraMora/DataQuery/blob/master/README.md" class="w3-button w3-green w3-round-large" target="_blank">Ver detalles</a></p>
+                    </div>
                 </div>
-                <p><a href="https://github.com/JasonMoraMora/DataQuery/blob/master/README.md" class="w3-button w3-green w3-round-large" target="_blank">Ver detalles</a></p>
+                <div class="w3-container w3-card-2">
+                    <div>
+                        <h2>Sistema de notas</h2>            
+                        <p>Administrar las notas de los alumnos de una institucion</p>
+                        <div class="w3-opacity">
+                            <b><p>Tecnologias usadas:</p></b>
+                            <li>NodeJS</li>
+                            <li>MySQL</li>
+                            <li>ExpressJS</li>
+                            <li>CSS Grid</li>
+                            <li>W3.css & fontawesome.css</li>
+                            <li>AJAX & JSON</li>
+                        </div>
+                        <p><a href="https://github.com/JasonMoraMora/DataQuery/blob/master/README.md" class="w3-button w3-red w3-round-large" target="_blank">Ver detalles</a></p>
+                    </div>
+                </div>        
             </div>
-        </div>        
-  
+        </div>
         <!-- habilidades -->
         <div class="w3-container" id="habilidades">
             <div style="margin-top: 75px"></div>
@@ -196,10 +215,11 @@
         <div class="w3-container" id="certificados">
             <div style="margin-top: 75px"></div>
             <h1 class="w3-xxxlarge w3-text-blue"><b>Certificados</b></h1>
-            <hr class="w3-round w3-text-blue">            
+            <hr class="w3-round w3-text-blue"> 
+
             <div class="w3-row">
-                <div class="w3-col l4 m6 s12 w3-container w3-margin-bottom">
-                    <a href="tecn.jpg" target="_blank">
+                <div class="w3-col l4 m6 s12 w3-margin-bottom">
+                    <a href="imgs/tecn.jpg" target="_blank">
                         <img src="imgs/tecn.jpg" alt="certificado tecnico" width="100%" height="100%">
                     </a>
                 </div>              
@@ -237,9 +257,7 @@
             <p>Tambien puedes contactarme atravez de mis redes sociales</p>
             <a href="https://www.facebook.com/Jaison-Mora-547396385614913" target="_blank"><i class="fab fa-facebook-square w3-xxxlarge w3-text-indigo"></i></a>
             <a href="https://www.youtube.com/channel/UClpUfzMlZdnZJVlEEu5wE8w?view_as=subscriber" target="_blank"><i class="fab fa-youtube-square w3-xxxlarge w3-text-red w3-margin-left"></i></a>
-            <a href="https://github.com/JasonMoraMora" target="_blank"><i class="fab fa-github-square w3-xxxlarge w3-text-black w3-margin-left"></i></a>                                
-            <br> <br>
-            <a href="https://www.solvetic.com/user/35749-jaisonmora/" class="w3-button w3-border w3-border-cyan"><h5 class="w3-opacity"><i class="far fa-lightbulb w3-text-cyan"></i> Tutoriales</h5></a>
+            <a href="https://github.com/JasonMoraMora" target="_blank"><i class="fab fa-github-square w3-xxxlarge w3-text-black w3-margin-left"></i></a>
         </div>        
                 
         
