Se agrega el complemento git

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 <li>AJAX</li>
                 <li>JSON</li>
                 <li>MarkDown</li>
+                <li>Git</li>
             </ul>
 
             <br>
