api key google maps

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 }
             </script>
 
-            <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHvq-gqWjeLEMfoTHo2yXRhoh3khjC1Bk&callback=myMap"></script>
 
 
             <ul class="w3-ul w3-border">
