--- a/index.html
+++ b/index.html
@@ -129,30 +129,20 @@
             <br>
 
             <h2>Google Maps API</h2>
-            <p>
-                <button class="w3-button w3-red" onclick="mapBasic()">Basico</button>
-                <button class="w3-button w3-blue" onclick="mapMarkAnimate()">Basico</button>
-            </p>
+            <p>Uso basico de la API key de GCP, ejemplo con dos tipos de vista, dos propiedades "etiquetas" y "relieves"</p>
 
-            <div class="myMap" id="googleMap"></div>
+            <div class="myMap" id="map"></div>
             <script>
-                function myMap() {
-                    var mapProp = {                        
-                        center:new google.maps.LatLng(51.508742,-0.120850),
-                        zoom:11
-                    };
-                    var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);                    
+                var map;
+                function initMap() {
+                    map = new google.maps.Map(document.getElementById('map'), {
+                        center: {lat: -34.397, lng: 150.644},
+                        zoom: 11,
+                        mapTypeIds: ['roadmap', 'satellite', 'hybrid', 'terrain']
+                    });
                 }
-
-                function mapBasic() {
-                    
-                }
-                function roadMap(road) {
-                    
-
-                }
-            </script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHvq-gqWjeLEMfoTHo2yXRhoh3khjC1Bk&callback=myMap"></script>           
+            </script>            
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHvq-gqWjeLEMfoTHo2yXRhoh3khjC1Bk&callback=initMap" async defer></script>
 
             <br>
 
