--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
                 <div class="w3-container w3-green">                    
                     <h4>Crud nodeJs, handlebars Js y mysql</h4>
                     <p>Aplicacion para gestionar datos de personas</p>
-                    <p><a class="w3-button w3-hover-white w3-green w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/api-nodeArray" target="_blank">GitHub &lt;code&gt;</a></p>                
+                    <p><a class="w3-button w3-hover-white w3-green w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/CRUD-NodeJS-MySQL" target="_blank">GitHub &lt;code&gt;</a></p>                
                 </div>
                 <div class="w3-container w3-brown">
                     <h4>ApiRest made with Arrays</h4>
                     <p>Ejemplo de una apiRest solo usando datos de un array en el backend</p>
-                    <p><a class="w3-button w3-hover-white w3-brown w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/api-nodeArray" target="_blank">GitHub &lt;code&gt;</a></p>
+                    <p><a class="w3-button w3-hover-white w3-brown w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/ApiRest" target="_blank">GitHub &lt;code&gt;</a></p>
                 </div>
                 <div class="w3-container w3-red">
                     <h4>NodeJS y MongoDb</h4>
                     <p>Ejercicio en la cual experimento con una base de datos no relacional</p>
-                    <p><a class="w3-button w3-hover-white w3-red w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/api-nodeArray" target="_blank">GitHub &lt;code&gt;</a></p>
+                    <p><a class="w3-button w3-hover-white w3-red w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/CRUD-NodeJS-Mongodb" target="_blank">GitHub &lt;code&gt;</a></p>
                 </div>
             </div>
         </div>
