--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="w3-container w3-yellow">                    
                     <h4>Aplicacion de notas</h4>
                     <p>Aplicacion de notas con laravel</p>
-                    <p><a class="w3-button w3-hover-white w3-green w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/sistema-notas" target="_blank">Mas informacion</a></p>
+                    <p><a class="w3-button w3-hover-white w3-yellow w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/sistema-notas" target="_blank">Mas informacion</a></p>
                 </div>
                 
             </div>
