Se inserta imagenes por herramienta

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <title>Jason Mora || Portafolio</title>
     
     <script src="menu-responsive.js"></script>
-
 </head>
 
 <body>
@@ -89,20 +88,18 @@
                 <div class="grid-container-skills ">                
                     <div>
                         <ul class="w3-ul w3-border w3-hoverable">                        
-                            <li class="w3-blue"><h3>FrontEnd</h3></li>
+                            <li class="w3-red"><h3>FrontEnd</h3></li>
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>JavaScript</li>
                             <li>Angular</li>
                             <li>Bootstrap</li>
-                            <li>Font-awesome</li>
-                            <li>w3 CSS</li>
+                            <li>Font-awesome</li>                            
                         </ul>
                     </div>                    
                     <div>
                         <ul class="w3-ul w3-border w3-hoverable">
-                            <li class="w3-blue-grey"><h3>BackEnd </h3></li>
-                            <li>SqlServer</li>
+                            <li class="w3-blue-grey"><h3>BackEnd </h3></li>                        
                             <li>MySQL</li>
                             <li>MongoDB</li>                        
                             <li>NodeJS</li>
@@ -119,6 +116,7 @@
                             <li>MarkDown</li>
                             <li>Git</li>
                             <li>Npm</li>
+                            <li>Fetch</li>
                         </ul>
                     </div>                
             </article>                                 
@@ -128,16 +126,63 @@
             </article>
             <article>                                
                 <h3>Herramientas de software</h3>
-                <ul class="w3-ul w3-green" style="max-width: 400px;">                    
-                    <li class="w3-hover-yellow">Microsoft Windows</li>
-                    <li class="w3-hover-yellow">Linux Ubuntu</li>
-                    <li class="w3-hover-yellow">Linux Debian</li>
-                    <li class="w3-hover-yellow">GitKraken</li>
-                    <li class="w3-hover-yellow">Visual Studio Code</li>
-                    <li class="w3-hover-yellow">Terminal linux</li>
-                    <li class="w3-hover-yellow">MongoDB Compass</li>
-                    <li class="w3-hover-yellow">MySQL Workbench</li>
-                    <li class="w3-hover-yellow">Postman</li>
+                <ul class="w3-ul">                    
+                    <li class="w3-bar">
+                        <img src="imgs/windows.jpg" class="w3-bar-item w3-circle" style="width:85px">
+                        <div class="w3-bar-item">
+                            <span class="w3-large">Microsoft Windows</span><br>
+                            <span>Sistema Operativo</span>
+                        </div>
+                    </li>
+                    <li class="w3-bar">
+                        <img src="imgs/ubuntu.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <div class="w3-bar-item">
+                            <span class="w3-large">Linux Ubuntu</span><br>
+                            <span>Sistema Operativo</span>
+                        </div>
+                    </li>                    
+                    <li class="w3-bar">
+                        <img src="imgs/debian.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <div class="w3-bar-item">
+                            <span class="w3-large">Linux Debian</span><br>
+                            <span>Sistema Operativo</span>
+                        </div>
+                    </li>
+                    <li class="w3-bar">
+                        <img src="imgs/gitkraken.jpg" class="w3-bar-item w3-circle" style="width:85px">
+                        <div class="w3-bar-item">
+                            <span class="w3-large">GitKraken</span><br>
+                            <span>herramienta de control de versiones</span>
+                        </div>
+                    </li>                                    
+                    <li class="w3-bar">
+                        <img src="imgs/vscode.jpg" class="w3-bar-item w3-circle" style="width:85px">
+                        <div class="w3-bar-item">
+                            <span class="w3-large">Visual Studio Code</span><br>
+                            <span>editor de codigo</span>
+                        </div>
+                    </li>                
+                    <li class="w3-bar">
+                        <img src="imgs/terminal.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <div class="w3-bar-item">
+                            <span class="w3-large">Terminal</span><br>
+                            <span>Terminal linux deb</span>
+                        </div>
+                    </li>                    
+                    <li class="w3-bar">
+                        <img src="imgs/mysqlwork.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <div class="w3-bar-item">
+                            <span class="w3-large">MySQL Workbench</span><br>
+                            <span>Gestor de base de datos</span>
+                        </div>
+                    </li>                    
+                    <li class="w3-bar">
+                        <img src="imgs/postman.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <div class="w3-bar-item">
+                            <span class="w3-large">Postman</span><br>
+                            <span>Manejador de API</span>
+                        </div>
+                    </li>
                 </ul>                            
             </article>
             
