imagen responsive hide

--- a/index.html
+++ b/index.html
@@ -128,56 +128,56 @@
                 <h3>Herramientas de software</h3>
                 <ul class="w3-ul">                    
                     <li class="w3-bar">
-                        <img src="imgs/windows.jpg" class="w3-bar-item w3-circle" style="width:85px">
+                        <img src="imgs/windows.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                         <div class="w3-bar-item">
                             <span class="w3-large">Microsoft Windows</span><br>
                             <span>Sistema Operativo</span>
                         </div>
                     </li>
                     <li class="w3-bar">
-                        <img src="imgs/ubuntu.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <img src="imgs/ubuntu.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                         <div class="w3-bar-item">
                             <span class="w3-large">Linux Ubuntu</span><br>
                             <span>Sistema Operativo</span>
                         </div>
                     </li>                    
                     <li class="w3-bar">
-                        <img src="imgs/debian.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <img src="imgs/debian.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                         <div class="w3-bar-item">
                             <span class="w3-large">Linux Debian</span><br>
                             <span>Sistema Operativo</span>
                         </div>
                     </li>
                     <li class="w3-bar">
-                        <img src="imgs/gitkraken.jpg" class="w3-bar-item w3-circle" style="width:85px">
+                        <img src="imgs/gitkraken.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                         <div class="w3-bar-item">
                             <span class="w3-large">GitKraken</span><br>
                             <span>herramienta de control de versiones</span>
                         </div>
                     </li>                                    
                     <li class="w3-bar">
-                        <img src="imgs/vscode.jpg" class="w3-bar-item w3-circle" style="width:85px">
+                        <img src="imgs/vscode.jpg" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                         <div class="w3-bar-item">
                             <span class="w3-large">Visual Studio Code</span><br>
                             <span>editor de codigo</span>
                         </div>
                     </li>                
                     <li class="w3-bar">
-                        <img src="imgs/terminal.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <img src="imgs/terminal.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                         <div class="w3-bar-item">
                             <span class="w3-large">Terminal</span><br>
                             <span>Terminal linux deb</span>
                         </div>
                     </li>                    
                     <li class="w3-bar">
-                        <img src="imgs/mysqlwork.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <img src="imgs/mysqlwork.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                         <div class="w3-bar-item">
                             <span class="w3-large">MySQL Workbench</span><br>
                             <span>Gestor de base de datos</span>
                         </div>
                     </li>                    
                     <li class="w3-bar">
-                        <img src="imgs/postman.png" class="w3-bar-item w3-circle" style="width:85px">
+                        <img src="imgs/postman.png" class="w3-bar-item w3-circle w3-hide-small" style="width:85px">
                         <div class="w3-bar-item">
                             <span class="w3-large">Postman</span><br>
                             <span>Manejador de API</span>
