--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="grid-container-skills ">                
                     <div>
                         <ul class="w3-ul w3-border w3-hoverable">                        
-                            <li class="w3-red"><h3>FrontEnd</h3></li>
+                            <li class="w3-green"><h3>FrontEnd</h3></li>
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>JavaScript</li>
