--- a/index.html
+++ b/index.html
@@ -54,7 +54,16 @@
             </div>
             <div>                
                 <p>Todos mis proyectos solo son la base de uso de tecnologias para crear aplicaciones, puedes seguir mis proyectos en mi cuenta de github</p>                
-                <div class="grid-container-project">                    
+                <div class="grid-container-project">
+                    <article class="w3-card w3-theme-l4">
+                        <img src="imgs/proyects/carrito.png" width="100%">
+                        <div class="w3-container">                                                        
+                            <p>
+                                <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/carrito-compras-LS" target="_blank"><i class="fas fa-code"></i></a>
+                                <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://moraboop.github.io/carrito-compras-LS/" target="_blank"><i class="fas fa-eye"></i></a>
+                            </p>
+                        </div>                        
+                    </article>
                     <article class="w3-card w3-theme-l4">
                         <img src="imgs/proyects/localstorage.png" width="100%">
                         <div class="w3-container">                                                        
@@ -79,8 +88,7 @@
                                 <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/DataQuery" target="_blank"><i class="fas fa-code"></i></a>
                             </p>
                         </div>
-                    </article>
-                    
+                    </article>                    
                     <article class="w3-card w3-theme-l4">
                         <img src="imgs/proyects/laravel.png" width="100%">
                         <div class="w3-container">                                                        
