--- a/index.html
+++ b/index.html
@@ -242,20 +242,20 @@
                 <hr class="w3-round w3-text-blue">
             </div>
 
-            <div class="w3-row">
-                <div class="w3-col l4 m6 s12 w3-margin-bottom">
+            <div class="grip-container-certificates">
+                <div class="w3-card">
                     <a href="imgs/tecn.jpg" target="_blank">
-                        <img src="imgs/tecn.jpg" alt="certificado tecnico" width="100%" height="100%">
+                        <img src="imgs/tecn.jpg" alt="certificado tecnico" width="100%">
                     </a>
                 </div>              
-                <div class="w3-col l4 m6 s12 w3-margin-bottom">
+                <div class="w3-card">
                     <a href="imgs/Certificate_page-0001.jpg" target="_blank">
-                        <img src="imgs/Certificate_page-0001.jpg" alt="certificado tecnico" width="100%" height="100%">
+                        <img src="imgs/Certificate_page-0001.jpg" alt="certificado tecnico" width="100%">
                     </a>
                 </div> 
-                <div class="w3-col l4 m6 s12 w3-margin-bottom">
+                <div class="w3-card">
                     <a href="imgs/MORA MORA,JAISON JHAIR_page-0001.jpg" target="_blank">
-                        <img src="imgs/MORA MORA,JAISON JHAIR_page-0001.jpg" alt="certificado tecnico" width="100%" height="100%">
+                        <img src="imgs/MORA MORA,JAISON JHAIR_page-0001.jpg" alt="certificado tecnico" width="100%">
                     </a>
                 </div>              
             </div>            
