--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
                 <p>Todos mis proyectos solo son la base de uso de tecnologias para crear aplicaciones, puedes seguir mis proyectos en mi cuenta de github</p>                
                 <div class="grid-container-project">
                     <article class="w3-card w3-theme-l4">
+                        <img src="imgs/proyects/sis_venta.png" width="100%">
+                        <div class="w3-container">
+                            <p>Sistema de ventas en Cshar</p>
+                            <p>
+                                <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="" target="_blank"><i class="fas fa-code"></i></a>                                
+                            </p>
+                        </div>                        
+                    </article>
+                    <article class="w3-card w3-theme-l4">
                         <img src="imgs/proyects/carrito.png" width="100%">
                         <div class="w3-container">                                                        
                             <p>
@@ -230,6 +239,7 @@
                     <li>Frameworks de desarrollo</li>
                     <li>Patrones de desarrollo</li>
                     <li>Metodologias ajiles</li>
+                    <li>Programacion en capas</li>
                 </ul>                
             </div>
         </section>
