--- a/index.html
+++ b/index.html
@@ -57,16 +57,17 @@
                 <div class="grid-container-project">
                     <article class="w3-card w3-theme-l4">
                         <img src="imgs/proyects/sis_venta.png" width="100%">
-                        <div class="w3-container">
-                            <p>Sistema de ventas en Cshar</p>
+                        <div class="w3-container project">
+                            <p>SISTEMA DE VENTAS HECHO EN CSHARP, PATRON ARQUITECTONICO MVC</p>
                             <p>
-                                <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="" target="_blank"><i class="fas fa-code"></i></a>                                
+                                <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/sistema-ventas-cshar" target="_blank"><i class="fas fa-code"></i></a>
                             </p>
                         </div>                        
                     </article>
                     <article class="w3-card w3-theme-l4">
                         <img src="imgs/proyects/carrito.png" width="100%">
-                        <div class="w3-container">                                                        
+                        <div class="w3-container project">
+                            <p>PAGINA WEB CON CARRITO DE COMPRAS</p>
                             <p>
                                 <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/carrito-compras-LS" target="_blank"><i class="fas fa-code"></i></a>
                                 <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://moraboop.github.io/carrito-compras-LS/" target="_blank"><i class="fas fa-eye"></i></a>
@@ -75,8 +76,9 @@
                     </article>
                     <article class="w3-card w3-theme-l4">
                         <img src="imgs/proyects/localstorage.png" width="100%">
-                        <div class="w3-container">                                                        
+                        <div class="w3-container project">                                                        
                             <p>
+                                <p>PROYECTO JAVASCRIPT, CREAR Y ELIMINAR DESDE LS</p>
                                 <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/LocalStorage" target="_blank"><i class="fas fa-code"></i></a>
                                 <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://moraboop.github.io/LocalStorage/" target="_blank"><i class="fas fa-eye"></i></a>
                             </p>
@@ -84,15 +86,17 @@
                     </article>
                     <article class="w3-card w3-theme-l4">
                         <img src="imgs/proyects/crudphp.png" width="100%">
-                        <div class="w3-container">                                                        
+                        <div class="w3-container project">                                                        
                             <p>
+                                <p>CRUD HECHO CON LARAVEL, PHP, MYSQL</p>
                                 <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/php-crud-task" target="_blank"><i class="fas fa-code"></i></a>                                
                             </p>
                         </div>
                     </article>
                     <article class="w3-card w3-theme-l4">
                         <img src="imgs/proyects/data.png" width="100%">
-                        <div class="w3-container">                                                        
+                        <div class="w3-container project">                                                        
+                            <p>CRUD HECHO CON NODEJS Y MONGODB</p>
                             <p>
                                 <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/DataQuery" target="_blank"><i class="fas fa-code"></i></a>
                             </p>
@@ -100,7 +104,8 @@
                     </article>                    
                     <article class="w3-card w3-theme-l4">
                         <img src="imgs/proyects/laravel.png" width="100%">
-                        <div class="w3-container">                                                        
+                        <div class="w3-container project">
+                            <p>CRUD HECHO CON PHP Y MYSQL</p>
                             <p>
                                 <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/sistema-notas" target="_blank"><i class="fas fa-code"></i></a>
                             </p>
