--- a/index.html
+++ b/index.html
@@ -59,60 +59,46 @@
 
           <div class="grid-container-project">
 
-            <article class="w3-card w3-theme-l4" style="padding: 10px;">    
-              <img src="imgs/proyects/cap.png" width="100%">
+            <article class="w3-card w3-theme-l4" style="padding: 10px;">
+              <div style="height: 140px; overflow: hidden;">
+                <img src="imgs/proyects/min-carrito-compras-ls.png" style="width: 100%; height: auto;">
+              </div>
               <div class="w3-container project">
-                <p>PAGINA WEB CON CARRITO DE COMPRAS</p>
+                <p>Pagina web con carrito de compras, hecho con JavaScript</p>
                 <p>
-                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/carrito-compras-LS" target="_blank"><i class="fas fa-code"></i></a>
-                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://moraboop.github.io/carrito-compras-LS/" target="_blank"><i class="fas fa-eye"></i></a>
+                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/JMoraMora/carrito-compras-ls" target="_blank"><i class="fas fa-code"></i></a>
                 </p>
               </div>                        
             </article>
 
             <article class="w3-card w3-theme-l4" style="padding: 10px;">
-              <img src="imgs/proyects/cap.png" width="100%">
+              <div style="height: 140px; overflow: hidden;">
+                <img src="imgs/proyects/min-local-storage.png" style="width: 100%; height: auto;">
+              </div>
               <div class="w3-container project">
                 <p>
-                  <p>PROYECTO JAVASCRIPT, CREAR Y ELIMINAR DESDE LS</p>
-                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/LocalStorage" target="_blank"><i class="fas fa-code"></i></a>
-                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://moraboop.github.io/LocalStorage/" target="_blank"><i class="fas fa-eye"></i></a>
+                  <p>Almacenar datos en el Local Storage del navegador</p>
+                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/JMoraMora/local-storage" target="_blank"><i class="fas fa-code"></i></a>
                 </p>
               </div>
             </article>
             
             <article class="w3-card w3-theme-l4" style="padding: 10px;">
-              <img src="imgs/proyects/min-php-crud-task.png" width="100%">
+              <div style="height: 140px; overflow: hidden;">
+                <img src="imgs/proyects/min-php-crud-task.png" style="width: 100%; height: auto;">
+              </div>
               <div class="w3-container project">
                 <p>
                   <p>Abm con php y mysql</p>
-                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/php-crud-task" target="_blank"><i class="fas fa-code"></i></a>
+                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/JMoraMora/php-crud-task" target="_blank"><i class="fas fa-code"></i></a>
                 </p>
               </div>
             </article>
 
             <article class="w3-card w3-theme-l4" style="padding: 10px;">
-              <img src="imgs/proyects/cap.png" width="100%">
-              <div class="w3-container project">
-                <p>CRUD HECHO CON NODEJS Y MONGODB</p>
-                <p>
-                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/DataQuery" target="_blank"><i class="fas fa-code"></i></a>
-                </p>
+              <div style="height: 140px; overflow: hidden;">
+                <img src="imgs/proyects/min-php-crud-usuarios.png" style="width: 100%; height: auto;">
               </div>
-            </article>
-
-            <article class="w3-card w3-theme-l4" style="padding: 10px;">
-              <img src="imgs/proyects/cap.png" width="100%">
-              <div class="project">
-                <p>CRUD HECHO CON PHP Y MYSQL</p>
-                <p>
-                  <a class="w3-button w3-hover-white w3-blue w3-border w3-border-white w3-round-large" href="https://github.com/MoraBoop/sistema-notas" target="_blank"><i class="fas fa-code"></i></a>
-                </p>
-              </div>
-            </article>
-
-            <article class="w3-card w3-theme-l4" style="padding: 10px;">
-              <img src="imgs/proyects/min-php-crud-usuarios.png" width="100%">
               <div class="project">
                 <p>Aplicacion asincrona con php y ajax</p>
                 <p>
