add certificado udemy git

--- a/index.html
+++ b/index.html
@@ -270,6 +270,11 @@
             <img src="imgs/certificates/von-braun.jpg" alt="certificado tecnico" width="100%">
           </a>
         </div>
+        <div class="w3-card">
+          <a href="imgs/certificates/certi-udemy-git.jpg" target="_blank">
+            <img src="imgs/certificates/certi-udemy-git.jpg" alt="certificado tecnico" width="100%">
+          </a>
+        </div>
       </div>            
     </section>
 
