se quita angular como skil

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <li>HTML</li>
               <li>CSS</li>
               <li>JavaScript</li>
-              <li>Angular</li>
+              <li>VueJS</li>
               <li>Bootstrap</li>
               <li>Font-awesome</li>                            
             </ul>
