cambios para crear nuevo plantilla

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+
+  <!-- fonts -->
+  <link rel="stylesheet" href="assets/css/font.css">
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
+
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="fav/favicon.ico">    
   
+  <link rel="icon" href="fav/favicon.ico">
   <title>Jason Mora || Portafolio</title>
   
   <script src="menu-responsive.js"></script>
@@ -303,8 +307,9 @@
       <br>
 
       <!-- redes sociales -->            
-      <h3 class="w3-opacity">Redes Sociales</h3>            
-      <a href="https://www.facebook.com/eliot.mora13" target="_blank"><i class="fab fa-facebook-square w3-xxxlarge w3-text-indigo"></i></a>
+      <h3 class="w3-opacity">Redes Sociales</h3>
+      <a href="#" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://www.youtube.com/channel/UClpUfzMlZdnZJVlEEu5wE8w?view_as=subscriber" target="_blank"><i class="fab fa-youtube-square w3-xxxlarge w3-text-red w3-margin-left"></i></a>
       <a href="https://github.com/moraboop" target="_blank"><i class="fab fa-github-square w3-xxxlarge w3-text-black w3-margin-left"></i></a>
       <a href="https://moraboop.blogspot.com/" target="_blank"><i class="fab fa-blogger w3-xxxlarge w3-text-orange w3-margin-left"></i></a>
